2016-10-07  Charlie Zender  <zender@uci.edu>

	* Jerome changed multi-args to use strstr() instead of strtok() or strsep()

2016-10-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.2-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.2-alpha02 final changes';git push
	git tag -a 4.6.2-alpha02 -m 'Version 4.6.2-alpha02 new features: multi-arguments (nco_mta.[ch]), ARFLAGS, LLVM 8.0.0, GCC 6.2.1';git push --tags

	* nco_rgr_ini() now only calls nco_arg_mlt_prs() when rgr_arg_nbr > 0

2016-10-01  Charlie Zender  <zender@uci.edu>

	* Alter nco_mta_get() to initialize delimiter if NULL

	* Makefile sets ARFLAGS to rsUv (U is new) to create non-deterministic library archives
	Prevents GCC toolchain i18n warnings on Ubuntu 16.04 (xenial) and later

2016-09-30  Charlie Zender  <zender@uci.edu>

	* Fix compiler warnings emitted by clang LLVM 8.0.0

	* Update configure.ac MAKEINFO_VERSION to grep for texinfo so MacOS 'texi2any' works

	* #include netcdf_mem.h for nc_open_mem() prototype

	* Fix compiler warnings emitted by GCC 6.2.1

2016-09-26  Charlie Zender  <zender@uci.edu>

	* Fix false-positives in multi-argument regression tests

2016-09-26  Charlie Zender  <zender@uci.edu>

	* Adopt Jerome's implementation of multi-arg for trr, rgr, gaa, ppc

2016-09-23  Charlie Zender  <zender@uci.edu>

	* Split multi-argument parsing and KVM routines into nco_mta.[ch]

2016-09-23  Henry Butowsky  <henryb@hush.com>

	* Add manual section on vpointers

2016-09-21  Charlie Zender  <zender@uci.edu>

	* Improve exact non-spherical area solution

2016-09-21  Henry Butowsky  <henryb@hush.com>

	* Modify prn_cls(), change snprint() to sprint4, document sprint() and sprint4()

2016-09-18  Charlie Zender  <zender@uci.edu>

	* Add exact solution (untested) for non-spherical area of latitude-triangles

	* Change multi-argument delimiter from colon to hash

	* Add nco_lon_dff_brnch_rdn() to enforce branch-cut rules in area diagnosis

2016-09-16  Charlie Zender  <zender@uci.edu>
